Get filename from greengrass uri (#594)